deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: #{Namespace}
  labels:
    app: taskflow
    environment: #{Environment}
